[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
num-traits = "0.2.15"
rbmenu = "0.6.3"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.cursive]
version = "0.21.1"
#git="https://github.com/gyscos/cursive.git"
#path = "./cursive/cursive"
default-features = false
features = ["crossterm-backend"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
# panic = "abort" removed: rustc's tier-3 riscv64gc-unknown-linux-musl
# sysroot cannot ship a correctly-strategized panic_abort rlib (rustup's
# bootstrap builds it against a pre-built core hash which `-Z build-std`
# can't replicate). The size saving from abort vs unwind is small after
# LTO; keeping default unwind for a uniform profile across arches.
